<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>storm_slam</name>
  <version>0.0.1</version>
  <description>Handheld VLP16 to SLAM Toolbox mapping launch package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>velodyne</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>